app/assets/app.css
/* app css stylesheet */

#oxfordMap, #londonMap {
  width: 100%;
  height:100vh;
}

md-sidenav  {
  width: 110px;
  height:100%;
  background-color: #106CC8;
  border-right: 1px solid #eee;
}

md-content {
  height:100%;
}

md-switch.md-default-theme.md-checked .md-thumb, md-switch.md-checked .md-thumb {
  background-color: red;
}

.my-md-button {
  width: 100%;
  border-radius: 3px;
  box-sizing: border-box;
  color: white;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  outline: 0;
  border: 0;
  display: inline-block;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 6px 30px;
  line-height: 36px;
  min-height: 36px;
  background: 0 0;
  white-space: nowrap;
  min-width: 100%;
  text-align: left;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 14px;
  font-style: inherit;
  font-variant: inherit;
  font-family: inherit;
  text-decoration: none;
  cursor: pointer;
  overflow: hidden;
  transition: box-shadow .4s cubic-bezier(.25,.8,.25,1),background-color .4s cubic-bezier(.25,.8,.25,1);
}

.my-md-button:hover {
    background-color: #267ED5;
}

.active {
  background-color: #00A000;
}

.logo {
  border-bottom: 1px solid #267ED5;
  padding: 20px;
  color: white;
  font-weight: 900;
}

.home_div {
  padding-top: 20px;
  padding-left: 50px;
}

.home_div p {
  font-size: larger;
}

.flex {
  background-image: url("/app/assets/oxford.jpg");
  background-size: 100%;
  background-repeat: no-repeat;
}

.settings_div {
  padding: 15px 30px;
  color: white;
  font-weight: 500;
}

ul {
  padding: 0;
  border-bottom: 1px solid #267ED5;
}

